[build-system]
requires = [
    "setuptools >= 57",
    "wheel >= 0.37",
    "setuptools_scm[toml]>=6",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/tox_conda/version.py"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
known_first_party = ["tox_conda"]
