[metadata]
name = tox_conda
description = tox plugin that provides integration with conda
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tox-dev/tox-conda
author = Daniel R. D'Avella
author_email = ddavella@stsci.edu
maintainer = Bernat Gabor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15.0,<0.18
    tox>=4,<5
python_requires = >=3.9

[options.packages.find]
exclude = tests

[options.entry_points]
tox =
    conda = tox_conda.plugin

[tool:pytest]
testpaths = tests
